--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gallery</title>
-
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
@@ -24,6 +24,7 @@
 
     <header>
         <h1></h1>
+        <p><a href="index.html">all galleries</a></p>
     </header>
 
     <button><svg id="menu" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
