--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Gallery</title>
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/css2?family=Cutive&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
