--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Home</title>
+	<title>Photo Galleries</title>
 
     <link rel="stylesheet" href="css/styles.css" />
 </head>
