--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+    <header>
+        <h1>flickr galleries</h1>
+    </header>
 
     <section></section>
 
