No more jQuery.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Photo Galleries</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta >
     <link href="https://fonts.googleapis.com/css2?family=Cutive&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css" />
@@ -15,8 +15,6 @@
     </header>
 
     <section></section>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <script src="js/list-photosets.js"></script>
 
