--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta >
     <link href="https://fonts.googleapis.com/css2?family=Cutive&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="dist/styles.css" />
 </head>
 <body>
     <header>
