--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,8 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Cutive&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="dist/styles.css" />
+<!--    <link rel="stylesheet" href="dist/styles.css" />-->
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
     <nav>
