New arrow navigation and incremental changes.

--- a/data-only.html
+++ b/data-only.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Data Only</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="dns-prefetch" href="//live.staticflickr.com/">
 
     <link rel="stylesheet" href="dist/styles.css" />
@@ -16,3 +17,16 @@
 <script src="js/data-only.js"></script>
 </body>
 </html>
+
+// All
+color:#fff;
+background-color:#222;
+border-top:1px solid #555;
+height:3em;
+display:flex;
+flex-flow:row;
+order:1;
+justify-content:space-between
+
+// Desktop
+flex-wrap: wrap;
