--- a/index.html
+++ b/index.html
@@ -1,40 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Photo Galleries</title>
+    <meta charset="UTF-8">
+    <title>flickr photo galleries</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="dns-prefetch" href="//live.staticflickr.com/">
 
     <link rel="stylesheet" href="dist/styles.css" />
+
 </head>
 <body>
-    <header>
-        <h1>flickr galleries</h1>
-        <div id="gallery-all"><a href="index.html">All <span>Galleries</span></a></div>
-    </header>
 
-    <!-- Eventally, navigation needs to move inside the container -->
-    <nav>
-        <a href="#" id="prev">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 16 16">
-                <path class="fill" d="M6.293 13.707l-5-5c-0.391-0.39-0.391-1.024 0-1.414l5-5c0.391-0.391 1.024-0.391 1.414 0s0.391 1.024 0 1.414l-3.293 3.293h9.586c0.552 0 1 0.448 1 1s-0.448 1-1 1h-9.586l3.293 3.293c0.195 0.195 0.293 0.451 0.293 0.707s-0.098 0.512-0.293 0.707c-0.391 0.391-1.024 0.391-1.414 0z"></path>
-                <title>Previous</title>
-            </svg>
-        </a>
-        <a href="#" id="next">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 16 16">
-                <path class="fill" d="M9.707 13.707l5-5c0.391-0.39 0.391-1.024 0-1.414l-5-5c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414l3.293 3.293h-9.586c-0.552 0-1 0.448-1 1s0.448 1 1 1h9.586l-3.293 3.293c-0.195 0.195-0.293 0.451-0.293 0.707s0.098 0.512 0.293 0.707c0.391 0.391 1.024 0.391 1.414 0z"></path>
-                <title>Next</title>
-            </svg>
-        </a>
-    </nav>
+<div id="gallery-index"></div>
+<div id="gallery" class="hide"></div>
 
-    <main>
-        <div id="gallery-index" class="hide"></div>
-        <div id="gallery"></div>
-    </main>
-
-    <script src="js/list-photosets.js"></script>
-
+<script src="js/app.js"></script>
 </body>
 </html>
+
+<!--
+// All
+color:#fff;
+background-color:#222;
+border-top:1px solid #555;
+height:3em;
+display:flex;
+flex-flow:row;
+order:1;
+justify-content:space-between
+
+// Desktop
+flex-wrap: wrap;
+-->
